tests/smoothy/equality/snapshots/smoothy__equality__equals__with_chars__fails_for_wrong_char.snap
---
source: tests/smoothy/equality/equals.rs
expression: assertion_failed_output
---
assertion failed: `(actual == expected)`'
   actual: `"'a'"`
 expected: `"'b'"`

[1mDifferences[0m ([31m[2m-[0m[31mactual[0m|[32m[2m+[0m[32mexpected[0m):
[31m[1m[2m-[0m[31m'[0m[31m[1m[4ma[0m[31m'[0m
[32m[1m[2m+[0m[32m'[0m[32m[1m[4mb[0m[32m'[0m
